rsfg/tests/scripts/error/mismatched-decl.sfg
fn main()
	var x: str = 5

